import java.util.ArrayList;

public class Card {
ArrayList cardSorter;
}
