public class Challenger extends Player
{


    public Challenger(String name, int playerNum) {
        super(name, playerNum);
    }
}

