public class Dealer extends Player{
    public Dealer(String name, int playerNum) {
        super(name, playerNum);
    }
}
