import java.util.ArrayList;

public class Scoreboard {
    ArrayList <Player> players;
    ArrayList <int> points;
}
